:bug: [open-formulieren/open-forms#3577] Fix overflow issue because of duplicated error styles
Suppress the formio styles alltogether and apply more NL DS styles
for a more consistent look.

The explicit width: 100% declarations are removed as they cause
overflows due to box-sizing rules, but the behaviour without
setting these appears to be correct in our and other's themes.

--- a/src/scss/components/_errors.scss
+++ b/src/scss/components/_errors.scss
@@ -21,3 +21,9 @@
     }
   }
 }
+
+// the formio styles conflict with our NL DS components, applying double padding and
+// causing overflows, so we reset them.
+.formio-error-wrapper {
+  all: revert;
+}
